--- a/assignments/week_3/index.html
+++ b/assignments/week_3/index.html
@@ -48,8 +48,8 @@
 
 <!-- the title attribute allows for a tooltip to appear when you hover over an image. --> -->
 <!-- the width and height attribute allows the webpage to "reserve" space for the image while it's loading. -->
-<img src="leave.jpg" alt="boy.jpg" title="this is coolest image ever!" width="200" height ="200"/>
-
+<img src="leave.jpg" alt="the man hiding behind the leaves" title="this is coolest image ever!" width="200" height ="200"/>
+<!-- don't put image in alt-->
 <!-- figure elements are sections of a website that have text that go further into detail about an image -->
 
 <figure>
