--- a/projects/Hobby/index.html
+++ b/projects/Hobby/index.html
@@ -68,7 +68,7 @@
         <ul>
             <li><a href="https://www.worldtravelguide.net/guides/asia/singapore/singapore-city/">World Travel City</a></li>
             <li><a href="https://www.just-wanderlust.com/en/:">Just-Wanderlust</a></li>
-            <li><a href="https://www.tripadvisor.com/">tripadvisor</a></li>
+            <li><a href="https://www.tripadvisor.com/">Tripadvisor</a></li>
         </ul>
 
         <h3>Appendix</h3>
