--- a/assignments/week_4/muti-page website/gallery.html
+++ b/assignments/week_4/muti-page website/gallery.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer>
-       <p>copyright 2020 Xiaoying Liu</p> 
+       <p>©copyright 2020 Xiaoying Liu</p> 
     </footer>
   </div>
 </body>
