--- a/projects/portfolio/styles/index.html
+++ b/projects/portfolio/styles/index.html
@@ -45,20 +45,18 @@
           <div class="right-arrow"> 
           </div>
           <div id="link">
-            <a href="my Projects.html" >Go To My Projects</a> </div>
-     
+            <a href="my Projects.html" >Go To My Projects</a> 
+          </div>
       </p>
     </div>
+
     <div id = "portrait">
     <img src="../images/portrait1267400.jpg" alt="my protrait" width="267px" height="400px"/> 
     </div>
-   
-
-  <!-- <script src="js/scripts.js"></script> -->
+    
 </main>
 
-<footer>
-  ©copyright 2020 Xiaoying Liu</footer>
+<footer>©copyright 2020 Xiaoying Liu</footer>
 
   
 </body>
