--- a/projects/portfolio/styles/project 1.html
+++ b/projects/portfolio/styles/project 1.html
@@ -34,6 +34,7 @@
 
 <main>
   <div id="box">
+
     <div class="project-image-container">
       <img src="../images/brickwall500300.jpg" alt="a brickwall" width="500px" height="300">
     </div>
@@ -43,17 +44,15 @@
         <p> selection tool, color adjustment layers, gradient layers, blending mode, transform tool </p>
     </div>
    
-    
       <p class="alignleft"><a href="my Projects.html" >Back To My Projects</a></p>
       <p class="alignright"><a href="project 2.html" >Go To Project 2</a></p>
       <div style="clear:both"> </div>
     
   </div>
-  <script src="js/scripts.js"></script>
+  
 </main>
 
-<footer>
-  ©copyright 2020 Xiaoying Liu</footer>
+<footer>©copyright 2020 Xiaoying Liu</footer>
 
   
 </body>
