adding portfolio Version 1.0

--- a/projects/portfolio/styles/contact.html
+++ b/projects/portfolio/styles/contact.html
@@ -34,8 +34,11 @@
   <div id="contact-container">
     <div id="my-contact-info-container">
       <h2>I am glad to create something interesting with you...</h2>
-      <p>Email:</br>liuxiaoying200@gmail.com</br>
-          Phone Number:</br>415-425-6235</p>
+        <p>Email:</br>
+        <span class="protectedEmail" title="liuxiaoying200@gmail.com"></span></br>
+          Phone Number:</br>
+          <span class="protectedNumber" title="415-425-6235"></span>
+        </p>
     </div>
     <div id="form-container">
       <form>
