--- a/projects/portfolio/styles/index.html
+++ b/projects/portfolio/styles/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div id = "portrait">
-    <img src="../images/portrait1267400.jpg" alt="my protrait" width="267px" height="400px"/> 
+    <img src="../images/portrait1267400100.jpg" alt="my portrait" width="267px" height="400px"/> 
     </div>
     
 </main>
